--- a/lab6Q4/nbproject/private/private.properties
+++ b/lab6Q4/nbproject/private/private.properties
@@ -1,4 +1,5 @@
 deploy.ant.properties.file=E:\\Users\\Neuu\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
-j2ee.server.home=E:/Users/Neuu/Downloads/apache-tomcat-10.1.9-windows-x64/apache-tomcat-10.1.9
-j2ee.server.instance=tomcat101:home=E:\\Users\\Neuu\\Downloads\\apache-tomcat-10.1.9-windows-x64\\apache-tomcat-10.1.9
+file.reference.mysql-connector-java-5.1.16.jar=G:\\programming\\tools\\mysql-connector-java-5.1.16.jar
+j2ee.server.home=G:/programming/tools/apache-tomcat-10.1.9
+j2ee.server.instance=tomcat101:home=G:\\programming\\tools\\apache-tomcat-10.1.9
 user.properties.file=E:\\Users\\Neuu\\AppData\\Roaming\\NetBeans\\17\\build.properties
